white gap after loading fix

--- a/src/index.css
+++ b/src/index.css
@@ -4,3 +4,8 @@
 .logo {
   background-image: url('/assets/react.svg'); /* <-- is line ko hatao ya comment karo */
 }
+
+
+body {
+  overflow-x: hidden;
+}
